syntax = "proto3";

option csharp_namespace = "GrpcExperiments.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service DemoService {
    // Methods
    rpc GetPluginDetails (google.protobuf.Empty) returns (PluginMetadata);
    rpc GetSystemInfo (google.protobuf.Empty) returns (GetSystemInfoReply);

    // Events
    rpc SubscribeTestEvent (google.protobuf.Empty) returns (stream TestEvent);
}

message PluginMetadata
{
    string plugin_name = 1;
    string plugin_description = 2;
}

message TestEvent
{
    google.protobuf.Timestamp event_time = 1;
    string event_id = 2;
    string event_message = 3;
}

message GetSystemInfoReply
{
    string computer_name = 1;
    string os_version = 2;
}




